crates/xlate/tests/snapshots/golden_matrix__tools_function_reasoning_capture__o4-mini__20260910__responses_to_chat__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "Weather in Paris? Use the tool."
    }
  ],
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "get_weather",
        "description": "Get weather.",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "city": {
              "type": "string"
            }
          },
          "required": [
            "city"
          ],
          "type": "object"
        }
      }
    }
  ],
  "max_completion_tokens": 256,
  "store": false
}
--- headers ---
upstream_streams: false
--- degraded ---
reasoning=dropped
